--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "normalize.css": "^8.0.1"
   }
 }
