--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,19 @@
 baseURL = "https://a.l3x.in/"
 languageCode = "en-us"
 title = "Al3x"
+
+[menu]
+
+  [[menu.main]]
+    identifier = "about"
+    name = "about hugo"
+    pre = "<i class='fa fa-heart'></i>"
+    url = "/about/"
+    weight = -110
+
+  [[menu.main]]
+    name = "getting started"
+    post = "<span class='alert'>New!</span>"
+    pre = "<i class='fa fa-road'></i>"
+    url = "/getting-started/"
+    weight = -100
