--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
+  "license": "Apache",
+  "devDependencies": {},
+  "dependencies": {
     "axios": "^0.19.2",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "@fortawesome/fontawesome-free": "^5.13.1"
   }
 }
