--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {},
   "author": "",
   "license": "Apache",
-  "devDependencies": {},
   "dependencies": {
     "@babel/cli": "^7.10.3",
     "@babel/core": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
     "@fortawesome/fontawesome-free": "^5.13.1",
     "axios": "^0.19.2",
+    "eslint": "^7.3.1",
+    "eslint-config-strongloop": "^2.1.0",
     "ncu": "^0.2.1",
     "normalize.css": "^8.0.1"
   }
