--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/preset-env": "^7.10.3",
     "@fortawesome/fontawesome-free": "^5.13.1",
     "axios": "^0.19.2",
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.3.1",
     "eslint-config-strongloop": "^2.1.0",
     "ncu": "^0.2.1",
