--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "eslint": "^7.3.1",
     "eslint-config-strongloop": "^2.1.0",
     "ncu": "^0.2.1",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "stylelint": "^13.6.1",
+    "stylelint-config-standard": "^20.0.0"
   }
 }
