--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ title = "Al3x"
 
 [params]
   author = "Alexander Fortin"
-  description = "Life is too short for no automation"
+  description = "Because life is too short for no automation"
   articles_in_index = 4
 
 [menu]
