--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ title = "Al3x"
 [params]
   author = "Alexander Fortin"
   description = "Because life is too short for no automation"
-  articles_in_index = 4
+  listed_articles = 4
 
 [menu]
 
