--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,8 @@
+[build]
+  command = "make deploy"
+
 [build.environment]
   HUGO_VERSION = "0.73.0"
   HUGO_ENV = "production"
   HUGO_ENABLEGITINFO = "true"
+  NODE_MODULES_PATH = "/usr/local/lib/node_modules"
