--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ title = "Al3x"
 
 [params]
   author = "Alexander Fortin"
-  description = "Because life is too short for no automation"
+  description = "Alexander Fortin's personal web site"
   listed_articles = 4
 
 [menu]
