--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-strongloop": "^2.1.0",
     "ncu": "^0.2.1",
     "normalize.css": "^8.0.1",
+    "rss-parser": "^3.8.0",
     "stylelint": "^13.6.1",
     "stylelint-config-standard": "^20.0.0"
   }
