--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^7.4.0",
     "eslint-config-strongloop": "^2.1.0",
+    "fast-xml-parser": "^3.17.4",
     "ncu": "^0.2.1",
     "normalize.css": "^8.0.1",
-    "rss-parser": "^3.8.0",
     "stylelint": "^13.6.1",
     "stylelint-config-standard": "^20.0.0"
   }
