--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,7 @@ title = "Al3x"
 copyright = "This work is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License."
 rssLimit = 10
 enableRobotsTXT = true
+disqusShortname = "a-l3x-in"
 
 [params]
   author = "Al3x"
