--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,7 @@
   publish = "public/"
 
 [build.environment]
+  BUILD_ENV = "production"
   HUGO_VERSION = "0.74.3"
   HUGO_ENV = "production"
   HUGO_ENABLEGITINFO = "true"
