--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/core": "^7.11.0",
     "@babel/preset-env": "^7.11.0",
     "@fortawesome/fontawesome-free": "^5.14.0",
+    "ackee-tracker": "^3.3.0",
     "axios": "^0.19.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.6.0",
