--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,7 @@ disqusShortname = "a-l3x-in"
 
 [params]
   author = "Al3x"
+  author_full = "Alexander Fortin"
   description = "Alexander Fortin's personal web site"
   listed_articles = 3
   feed = "/index.xml"
