--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "eslint": "^8.9.0",
     "eslint-config-strongloop": "^2.1.0",
     "fast-xml-parser": "^4.0.3",
-    "ncu": "^0.2.1",
     "normalize.css": "^8.0.1",
     "stylelint": "^14.5.1",
     "stylelint-config-standard": "^25.0.0"
+  },
+  "devDependencies": {
+    "npm-check-updates": "^12.3.1"
   }
 }
