--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "fast-xml-parser": "^4.4.1",
     "normalize.css": "^8.0.1",
     "stylelint": "^16.8.2",
-    "stylelint-config-standard": "^36.0.1"
+    "stylelint-config-standard": "^36.0.1",
+    "toml": "^3.0.0"
   },
   "devDependencies": {
     "npm-check-updates": "^17.1.0"
